# morris

./: LICENSE  README.md  morris.cabal  stack.yaml
src/: Main.hs
src/Morris/: Parser.hs
test/: Spec.hs
test/Morris/Test/: Parser.hs
